--- a/nginx/coinhive-proxy.conf
+++ b/nginx/coinhive-proxy.conf
@@ -1,21 +1,10 @@
-http {
-    map $http_upgrade $connection_upgrade {
-        default upgrade;
-        '' close;
-    }
-
-    upstream websocket {
-        server localhost:8892;
-    }
-
-    server {
-        servername localhost
-        listen 80;
-        location / {
-            proxy_pass http://websocket
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection $connection_upgrade;
-        }
-    }
+server {
+	servername localhost;
+	listen 80;
+	location / {
+		proxy_pass http://localhost:8892;
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection $connection_upgrade;
+	}
 }
