--- a/nginx/coinhive-proxy.conf
+++ b/nginx/coinhive-proxy.conf
@@ -1,5 +1,10 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
+
 server {
-	servername localhost;
+	server_name localhost;
 	listen 80;
 	location / {
 		proxy_pass http://localhost:8892;
