--- a/nginx/coinhive-proxy.conf
+++ b/nginx/coinhive-proxy.conf
@@ -4,7 +4,7 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
-	server_name localhost;
+	server_name 0.0.0.0;
 	listen 80;
 	location / {
 		proxy_pass http://localhost:8892;
